create github pages

--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-2b" style="background-image: url(assets/images/k1v-hlubrt8-karsten-wurth-2000x1125.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Builder</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-2b" style="background-image: url(assets/images/k1v-hlubrt8-karsten-wurth-2000x1125.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -306,7 +306,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="sB6yl5Ho3QxKuj6NzA3gmvinZl6mTkSTIb0edKSEx+vmWCeB2xn6WmRcbhA9HJUvHQ29vRZKJOoU2dPATObO1Thty/WU4kB8UDWqKOp9299EMkCVZ4jYgaaBtYyCZlAD" data-form-email="true">
+                    <input type="hidden" value="yZOcSzAiTgxUzOD6rJwq0/wPJ4sJF4Q7/OZRbsmQM4ku5iEnETEl3MnZ/4AfQn4bxm6MI7hci+a7Q1XJFwr2APc34+MN4cOQ2uuNy7Ai/5MJIZur/0ve1+TUf5AgVH+j" data-form-email="true">
 
                     <div class="form-group">
                         <label class="form-control-label" for="contacts5-29-name">Ваше имя<span class="form-asterisk">*</span></label>
