--- a/hse.html
+++ b/hse.html
@@ -73,7 +73,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Builder</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-3g" style="background-image: url(assets/images/77oxlgwwow0-samuel-zeller-2000x1333.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-3g" style="background-image: url(assets/images/77oxlgwwow0-samuel-zeller-2000x1333.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -97,7 +97,7 @@
             <div class="mbr-table-md-up">
 
               <div class="mbr-table-cell mbr-right-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 50%;">
-                  <div class="mbr-figure"><img src="assets/images/iuwlkxl49co-andre-robillard-1400x90215.jpg"></div>
+                  <div class="mbr-figure"><img src="assets/images/iuwlkxl49co-andre-robillard-1400x9021.jpg"></div>
               </div>
 
               
@@ -118,6 +118,28 @@
               
 
             </div>
+        </div>
+    </div>
+
+</section>
+
+<section class="mbr-section mbr-section__container article" id="header3-4t" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <h3 class="mbr-section-title display-2">ПРИМЕРЫ НАШИХ КОНСАЛТИНГОВЫХ УСЛУГ ВКЛЮЧАЮТ</h3>
+                <small class="mbr-section-subtitle"></small>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="mbr-section article mbr-section__container" id="content6-4s" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 col-md-6 lead"><ul><li>Оценка-диагностика культуры безопасности на производстве</li><li><span style="font-size: 1.07rem; line-height: 1.5;">Оценка-диагностика систем Охраны Труда, Промышленной Безопасности и Охраны Окружающей Среды</span></li><li><span style="font-size: 1.07rem; line-height: 1.5;">Программы по улучшению культуры безопасности на производстве</span></li><li><span style="font-size: 1.07rem; line-height: 1.5;">​Построение систем управления Охраны Труда, Промышленной Безопасности и Охраны Окружающей Среды&nbsp;</span></li><li><span style="font-size: 1.07rem; line-height: 1.5;">Оценка риска и риск-менеджмент в области охраны труда и здоровья</span></li></ul></div>
+            <div class="col-xs-12 col-md-6 lead"><ul><li>Разработка планов и процедур по Охране Труда, Промышленной Безопасности и Охраны Окружающей Среды</li><li>Проведение аудитов по Охране Труда, Промышленной Безопасности и Охраны Окружающей Среды</li><li>Разработка систем компетенций по Охраны Труда, Промышленной Безопасности и Охраны Окружающей Среды и оценка компетенций сотрудников</li><li>Управление чрезвычайными и кризисными ситуациями, проведение полномасштабных учений и тренингов</li></ul></div>
         </div>
     </div>
 
@@ -148,7 +170,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="СВЯЗАТЬСЯ С НАМИ">
 
-                        <input type="hidden" value="Hk7JvSEvGhXRj0smOABaqNTEdqoJ0A9KI1TKv13v0ACuILB/QV/1yJU4MW9TGn10Xhd4xvdgg7k7Mb5jTh3I79jgVaa/1k6zvXKrHcf3s2kZdQj+M9rdFVpLVpkla+tK" data-form-email="true">
+                        <input type="hidden" value="IooiF8W6bl5HmJ89pcISQVZvcs6qSFh23lkDQ15qhulNi17hVoxaYJxD7fX5VRY2+Rtz8Ei0MkwUfrFzA9W1FNUtivV0nvC5GLEAAXP42jfvYo+a9zXqUCzLc4g34uKv" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
