--- a/trainings.html
+++ b/trainings.html
@@ -73,7 +73,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-2u" style="background-image: url(assets/images/iozk8ykdhyg-hope-house-press-2000x2000.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Generator</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-2u" style="background-image: url(assets/images/iozk8ykdhyg-hope-house-press-2000x2000.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -186,7 +186,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="СВЯЗАТЬСЯ С НАМИ">
 
-                        <input type="hidden" value="KBs0W22fQzqKZ5LvEtKoYAafSugRWQRgOcZ0SqLNbeAL70nJtP3gYofDT1zXsbXd9h2i09smG3YrzyYbmisxjpfrEvRC6w3rlqXEjHZxgZzmTLAhLKJ6sWxjgb1xjiYN" data-form-email="true">
+                        <input type="hidden" value="yizfsHYMHDjawmuw4L1t0MVzLjHNfn4r8xJH5m3MB9hT192DDz+V2lnmQsRm1LZd9+o2OO9p1x+Dppj/N6gr8gT4QUnnR/9ba2gSO55iGyTKnn9LybzM9Yj2eaSoFKVj" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
