--- a/hse.html
+++ b/hse.html
@@ -73,7 +73,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-3g" style="background-image: url(assets/images/77oxlgwwow0-samuel-zeller-2000x1333.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Generator</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-3g" style="background-image: url(assets/images/77oxlgwwow0-samuel-zeller-2000x1333.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -170,7 +170,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="СВЯЗАТЬСЯ С НАМИ">
 
-                        <input type="hidden" value="IooiF8W6bl5HmJ89pcISQVZvcs6qSFh23lkDQ15qhulNi17hVoxaYJxD7fX5VRY2+Rtz8Ei0MkwUfrFzA9W1FNUtivV0nvC5GLEAAXP42jfvYo+a9zXqUCzLc4g34uKv" data-form-email="true">
+                        <input type="hidden" value="7n5ICQ9CSRSaXDJLc+3EpnMshJLdbaMEjecwdGH3Wn5rMzezjC8K9JPGF5HruOIrwRU7k3UW3UIJDTUYxVCKE4SK1C4ogImzzPlDzpINa2Lr0QXF7q8poxskfweYVCM+" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
