--- a/trainings.html
+++ b/trainings.html
@@ -73,7 +73,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Generator</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-2u" style="background-image: url(assets/images/iozk8ykdhyg-hope-house-press-2000x2000.jpg); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section article mbr-parallax-background mbr-after-navbar" id="msg-box8-2u" style="background-image: url(assets/images/iozk8ykdhyg-hope-house-press-2000x2000.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(34, 34, 34);">
     </div>
@@ -186,7 +186,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="СВЯЗАТЬСЯ С НАМИ">
 
-                        <input type="hidden" value="yizfsHYMHDjawmuw4L1t0MVzLjHNfn4r8xJH5m3MB9hT192DDz+V2lnmQsRm1LZd9+o2OO9p1x+Dppj/N6gr8gT4QUnnR/9ba2gSO55iGyTKnn9LybzM9Yj2eaSoFKVj" data-form-email="true">
+                        <input type="hidden" value="WchLfpRAG6KATgguVoEKInvOfok3YhggC23zBIAoi9itw7TiBQt0lgU4wTxMGhSIM8N1P0bPLrsx+RSqGpVXFaE2zQYIp3JA0P/PJpW5AXfLg1A8798CmJjTGJWfz1JA" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -233,7 +233,7 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2 text-xs-center">
                 <h3 class="mbr-section-title display-2">МЫ В СОЦСЕТЯХ</h3>
-                <div><a class="btn btn-social" title="Twitter" target="_blank" href="https://twitter.com/mobirise"><i class="socicon socicon-twitter"></i></a> <a class="btn btn-social" title="Facebook" target="_blank" href="https://www.facebook.com/pages/Mobirise/1616226671953247"><i class="socicon socicon-facebook"></i></a>  <a class="btn btn-social" title="YouTube" target="_blank" href="https://www.youtube.com/channel/UCt_tncVAetpK5JeM8L-8jyw"><i class="socicon socicon-youtube"></i></a> <a class="btn btn-social" title="Instagram" target="_blank" href="https://instagram.com/mobirise/"><i class="socicon socicon-instagram"></i></a>   <a class="btn btn-social" title="LinkedIn" target="_blank" href="https://www.linkedin.com/in/mobirise"><i class="socicon socicon-linkedin"></i></a>   </div>
+                <div><a class="btn btn-social" title="Twitter" target="_blank" href="https://twitter.com/EcoMarineKz"><i class="socicon socicon-twitter"></i></a> <a class="btn btn-social" title="Facebook" target="_blank" href="https://www.facebook.com/ecomarinekz"><i class="socicon socicon-facebook"></i></a>   <a class="btn btn-social" title="Instagram" target="_blank" href="https://instagram.com/mobirise/"><i class="socicon socicon-instagram"></i></a>   <a class="btn btn-social" title="LinkedIn" target="_blank" href="https://www.linkedin.com/in/mobirise"><i class="socicon socicon-linkedin"></i></a>   </div>
             </div>
         </div>
     </div>
